--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ScannerActivity"
+            android:screenOrientation="fullSensor"
             android:exported="false" />
         <activity
             android:name=".Student_Login_Activity"
