Teacher UI Created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,15 @@
         android:theme="@style/Theme.AttendEase"
         tools:targetApi="31">
         <activity
-            android:name=".ScannerActivity"
-            android:screenOrientation="fullSensor"
+            android:name=".Create_QR"
             android:exported="false" />
+        <activity
+            android:name=".Home_Page_Teacher"
+            android:exported="false" />
+        <activity
+            android:name=".ScannerActivity"
+            android:exported="false"
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".Student_Login_Activity"
             android:exported="false" />
